--- a/src/php/registration.html
+++ b/src/php/registration.html
@@ -6,55 +6,71 @@
     <link type="text/css" rel="stylesheet" href="../css/common.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../js/registration.js" type="text/javascript"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+
 </head>
-<body>
-    <section>
-        <h2>Registration Form</h2>
+<body id="login_body">
+    <div class="container">
+        <h2 class="text-primary">Registration Form</h2>
         <form action="registration.php" method="post">
+          <div class="form-group">
             <label class="required">NetId</label>
-            <input type="text" name="username" placeholder="NetId" id="netId"><br/>
-
+            <input class="form-control" type="text" name="username" placeholder="NetId" id="netId">
+          </div>
+          <div class="form-group">
             <label class="required"> Password</label>
-            <input type="password" name="password" placeholder="Password" id="password"><br/>
-
+            <input class="form-control" type="password" name="password" placeholder="Password" id="password">
+          </div>
+          <div class="form-group">
 			      <label class="required">Confirm Password</label>
-            <input type="password" name="confirm_password" placeholder="Confirm Password" id="confirm_password"><br/>
-
+            <input class="form-control"type="password" name="confirm_password" placeholder="Confirm Password" id="confirm_password">
+          </div>
+            <div class="form-group">
 			      <label class="required">First Name</label>
-            <input type="text" name="fName" placeholder="First Name" id="fName"><br/>
-
+            <input class="form-control" type="text" name="fName" placeholder="First Name" id="fName">
+          </div>
+          <div class="form-group">
 			      <label class="required">Last Name</label>
-            <input type="text" name="lName" placeholder="Last Name" id="lName"><br/>
-
+            <input class="form-control" type="text" name="lName" placeholder="Last Name" id="lName">
+          </div>
+            <div class="form-group">
             <label class="required">Major</label>
-            <select id="major" name="major">
+            <select class="form-control" id="major" name="major">
               <option value="0">Your Major</option>
               <option value="CS">Computer Science</option>
               <option value="ITM">ITM</option>
               <option value="MSBA">MSBA</option>
-            </select><br/>
-
+            </select>
+          </div>
+          <div class="form-group">
             <label class="required">Degree</label>
-            <select id="degree" name="degree">
+            <select class="form-control" id="degree" name="degree">
               <option value="0">Your Degree</option>
               <option value="Graduate">Graduate</option>
               <option value="Under-Graduate">Under-Graduate</option>
-            </select><br/>
-
-      		  <label>Gender</label>
+            </select></br>
+          </div>
+          <div class="form-group">
+      		  <label>Gender </label>
       		    <input type="radio" name="gender" value="male" id="male"> Male
               <input type="radio" name="gender" value="female" id="female"> Female<br/>
-
+            </div>
+            <div class="form-group">
             <label class="required">Email</label>
-            <input type="text" name="email" placeholder="Email" id="email"><br/>
-
+            <input class="form-control" type="text" name="email" placeholder="Email" id="email"><br/>
+          </div>
+          <div class="form-group">
 			      <label class="required">Phone</label>
-            <input type="text" name="phone" placeholder="Phone" id="phone"><br/>
-
-            <input type="submit" id="validate">
+            <input class="form-control" type="text" name="phone" placeholder="Phone" id="phone"><br/>
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="submit" id="validate">
+          </div>
         </form>
 
-    </section>
-
+      </div>
 </body>
 </html>
