--- a/src/php/registration.html
+++ b/src/php/registration.html
@@ -56,15 +56,15 @@
           <div class="form-group">
       		  <label>Gender </label>
       		    <input type="radio" name="gender" value="male" id="male"> Male
-              <input type="radio" name="gender" value="female" id="female"> Female<br/>
+              <input type="radio" name="gender" value="female" id="female"> Female
             </div>
             <div class="form-group">
             <label class="required">Email</label>
-            <input class="form-control" type="text" name="email" placeholder="Email" id="email"><br/>
+            <input class="form-control" type="text" name="email" placeholder="Email" id="email">
           </div>
           <div class="form-group">
 			      <label class="required">Phone</label>
-            <input class="form-control" type="text" name="phone" placeholder="Phone" id="phone"><br/>
+            <input class="form-control" type="text" name="phone" placeholder="Phone" id="phone"></br>
           </div>
           <div class="form-group">
             <input class="form-control" type="submit" id="validate">
