--- a/src/php/registration.html
+++ b/src/php/registration.html
@@ -67,7 +67,7 @@
             <input class="form-control" type="text" name="phone" placeholder="Phone" id="phone"></br>
           </div>
           <div class="form-group">
-            <input class="form-control" type="submit" id="validate">
+            <input class="btn btn-primary" type="submit" id="validate" >
           </div>
         </form>
 
