--- a/src/php/registration.html
+++ b/src/php/registration.html
@@ -14,30 +14,30 @@
 </head>
 <body id="login_body">
     <div class="container">
-        <h2 class="text-primary">Registration Form</h2>
+        <h2 class="text-primary">Registration Form</h2></br>
         <form action="registration.php" method="post">
           <div class="form-group">
-            <label class="required">NetId</label>
+            <label class="required text font-weight-bold">NetId</label>
             <input class="form-control" type="text" name="username" placeholder="NetId" id="netId">
           </div>
           <div class="form-group">
-            <label class="required"> Password</label>
+            <label class="required text font-weight-bold"> Password</label>
             <input class="form-control" type="password" name="password" placeholder="Password" id="password">
           </div>
           <div class="form-group">
-			      <label class="required">Confirm Password</label>
+			      <label class="required text font-weight-bold">Confirm Password</label>
             <input class="form-control"type="password" name="confirm_password" placeholder="Confirm Password" id="confirm_password">
           </div>
             <div class="form-group">
-			      <label class="required">First Name</label>
+			      <label class="required text font-weight-bold">First Name</label>
             <input class="form-control" type="text" name="fName" placeholder="First Name" id="fName">
           </div>
           <div class="form-group">
-			      <label class="required">Last Name</label>
+			      <label class="required text font-weight-bold">Last Name</label>
             <input class="form-control" type="text" name="lName" placeholder="Last Name" id="lName">
           </div>
             <div class="form-group">
-            <label class="required">Major</label>
+            <label class="required text font-weight-bold">Major</label>
             <select class="form-control" id="major" name="major">
               <option value="0">Your Major</option>
               <option value="CS">Computer Science</option>
@@ -46,7 +46,7 @@
             </select>
           </div>
           <div class="form-group">
-            <label class="required">Degree</label>
+            <label class="required text font-weight-bold">Degree</label>
             <select class="form-control" id="degree" name="degree">
               <option value="0">Your Degree</option>
               <option value="Graduate">Graduate</option>
@@ -54,16 +54,16 @@
             </select></br>
           </div>
           <div class="form-group">
-      		  <label>Gender </label>
+      		  <label class="text font-weight-bold">Gender </label>
       		    <input type="radio" name="gender" value="male" id="male"> Male
               <input type="radio" name="gender" value="female" id="female"> Female
             </div>
             <div class="form-group">
-            <label class="required">Email</label>
+            <label class="required text font-weight-bold">Email</label>
             <input class="form-control" type="text" name="email" placeholder="Email" id="email">
           </div>
           <div class="form-group">
-			      <label class="required">Phone</label>
+			      <label class="required text font-weight-bold">Phone</label>
             <input class="form-control" type="text" name="phone" placeholder="Phone" id="phone"></br>
           </div>
           <div class="form-group">
