--- a/src/php/registration.html
+++ b/src/php/registration.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
 </head>
 <body id="login_body">
-    <div class="container">
+      <div id="register_container" class="container">
         <h2 class="text-primary">Registration Form</h2></br>
         <form action="registration.php" method="post">
           <div class="form-group">
-            <label class="required text font-weight-bold">NetId</label>
+            <label class="text font-weight-bold">NetId</label>
             <input class="form-control" type="text" name="username" placeholder="NetId" id="netId">
           </div>
           <div class="form-group">
@@ -53,8 +53,8 @@
           </div>
           <div class="form-group">
       		  <label class="text font-weight-bold">Gender </label>
-      		    <input type="radio" name="gender" value="male" id="male"> Male
-              <input type="radio" name="gender" value="female" id="female"> Female
+      		    <input type="radio" name="gender" value="male" id="male">   <label class="required text font-weight-bold">Male</label>
+              <input type="radio" name="gender" value="female" id="female"> <label class="required text font-weight-bold">Female</label>
             </div>
             <div class="form-group">
             <label class="required text font-weight-bold">Email</label>
