--- a/src/php/login.html
+++ b/src/php/login.html
@@ -10,7 +10,7 @@
 
 </head>
 <body id="login_body">
-    <div class="container">
+    <div id="login_container" class=" container">
       <h2 class="text-primary">Online Course Registration login</h2>
         <form>
             <div class="form-group">
@@ -25,7 +25,13 @@
                 <input type="button" id="submit" value="Login" class="btn btn-primary"/>
             </div>
         </form>
-        <a href="registration.html">New user? Register Here</a>
+        <div class="row">
+          <div class="col-lg-7">
+            <a href="registration.html">New user? Register Here</a>
+          </div>
+          <div class="col-lg-4">
+            <a href="adminLogin.html">Login as Admin</a>
+          </div>
       </div>
 </body>
 </html>
