--- a/src/php/login.html
+++ b/src/php/login.html
@@ -11,19 +11,44 @@
 </head>
 <body id="login_body">
     <div id="login_container" class=" container">
-      <h2 class="text-primary">Online Course Registration login</h2>
+      <h2 class="text">Online Course Registration login</h2>
         <form>
-            <div class="form-group">
-              <label class="text font-weight-bold">Username  :</label>
-              <input class="form-control" type="text" name="username" id="username" />
+
+          <div class="row">
+              <div class="col-lg-4">
+                <div class="form-group">
+                  <label class="text">Username  :</label>
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <div class="form-group">
+                  <input class="form-control" type="text" name="username" id="username" />
+                </div>
+              </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4">
+              <div class="form-group">
+
+              <label class="text">Password : </label>
             </div>
-            <div class="form-group">
-              <label class="text font-weight-bold">Password : </label>
+            </div>
+            <div class="col-lg-7">
+                <div class="form-group">
               <input class="form-control" type="password" name="password" id="password" />
             </div>
-            <div class="form-group">
-                <input type="button" id="submit" value="Login" class="btn btn-primary"/>
+          </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-4">
+
+                <input type="button" id="submit" value="Login" class="btn"/>
             </div>
+
+    </div>
+
         </form>
         <div class="row">
           <div class="col-lg-7">
