--- a/src/php/adminLogin.html
+++ b/src/php/adminLogin.html
@@ -10,14 +10,14 @@
 </head>
 <body id="login_body">
   <div class="container">
-        <h2 class="text-primary">Online Course Admin login</h2>
+        <h2 class="text">Online Course Admin login</h2>
         <form>
           <div class="form-group">
-            <label class="text font-weight-bold">Username  : </label>
+            <label class="text">Username  : </label>
             <input class="form-control" type="text" name="admin_username" id="username" />
           </div>
           <div class="form-group">
-            <label class="text font-weight-bold">Password : </label>
+            <label class="text">Password : </label>
             <input class="form-control" type="password" name="admin_password" id="password" />
           </div>
           <div class="form-group">
