--- a/src/php/adminLogin.html
+++ b/src/php/adminLogin.html
@@ -1,30 +1,47 @@
 <html lang="en">
-<head>
-    <title>Admin Login Page</title>
-    <link type="text/css" rel="stylesheet" href="../css/common.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../js/adminLogin.js" type="text/javascript"></script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-</head>
-<body id="login_body">
-  <div class="container">
-        <h2 class="text">Online Course Admin login</h2>
-        <form>
-          <div class="form-group">
-            <label class="text">Username  : </label>
-            <input class="form-control" type="text" name="admin_username" id="username" />
-          </div>
-          <div class="form-group">
-            <label class="text">Password : </label>
-            <input class="form-control" type="password" name="admin_password" id="password" />
-          </div>
-          <div class="form-group">
-            <input type="button" id="submit" value="Login" class="btn btn-primary"></input>
+   <head>
+      <title>Admin Login Page</title>
+      <link type="text/css" rel="stylesheet" href="../css/common.css" />
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="../js/adminLogin.js" type="text/javascript"></script>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+   </head>
+   <body id="login_body">
+      <div class="container">
+         <h2 class="text">Online Course Admin login</h2>
+         <form>
+            <div class="row">
+               <div class="col-lg-4">
+                  <div class="form-group">
+                     <label class="text">Username  :</label>
+                  </div>
+               </div>
+               <div class="col-lg-7">
+                  <div class="form-group">
+                     <input class="form-control" type="text" name="admin_username" id="username" />
+                  </div>
+               </div>
             </div>
-        </form>
-
-  </div>
-</body>
+            <div class="row">
+               <div class="col-lg-4">
+                  <div class="form-group">
+                     <label class="text">Password : </label>
+                  </div>
+               </div>
+               <div class="col-lg-7">
+                  <div class="form-group">
+                     <input class="form-control" type="password" name="admin_password" id="password" />
+                  </div>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-lg-4">
+                  <input type="button" id="submit" value="Login" class="btn"></input>
+               </div>
+            </div>
+         </form>
+      </div>
+   </body>
 </html>
