--- a/src/php/login.html
+++ b/src/php/login.html
@@ -37,9 +37,12 @@
             </div>
          </div>
          <div class="row">
-            <div class="col-lg-4">
+
+<div class="col-lg-4">
+            <div class="form-group">
                <input type="button" id="submit" value="Login" class="btn"/>
             </div>
+          </div>
          </div>
       </form>
       <div class="row">
