--- a/src/php/adminLogin.html
+++ b/src/php/adminLogin.html
@@ -42,6 +42,11 @@
                </div>
             </div>
          </form>
+         <div class="row">
+            <div class="col-lg-4">
+               <a href="login.html">Login as Student</a>
+            </div>
+         </div>
       </div>
    </body>
 </html>
